@@ -1,3 +1,11 @@
+Mon Jun 21 15:52:57 2004  Jonathan Blandford  <jrb@gnome.org>
+
+	* gnome-window-properties.c (set_alt_click_value): Set the radio
+	group to be inconsistent if no matching modifier is found.
+
+	* gnome-window-properties.c (reload_settings): Check for NULL,
+	141453
+
 2004-06-07  Kaushal Kumar  <kaushal.kumar@wipro.com>
 
 	* gnome-window-properties.c (response_cb): Associate the help
